--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   bomberman:
-    image: sunderia/bomberman:0.1.1
+    image: sunderia/bomberman:0.1.3
     restart: unless-stopped
-    environment:
-      VELOCITY_SECRET: YOUR_SECRET # if omitted, the server will disable velocity support
+    # environment:
+      # VELOCITY_SECRET: YLIyDwyeyxdQTDGz0Guyp971AYVnN7yu # if omitted, the server will disable velocity support
     ports:
-      - "25566:25565"
+      - "25565:25565"
